<resources>
    <string name="app_name">NOW SOPT Android</string>
    <!--    로그인 화면-->
    <string name="login_title_top">Wellcome to Sopt!</string>
    <string name="login_id_text">ID</string>
    <string name="login_id_hint">아이디를 입력해 주세요</string>
    <string name="login_password_text">비밀번호</string>
    <string name="login_password_hint">비밀번호를 입력해 주세요</string>
    <string name="login_btn_text">로그인 하기</string>
    <string name="login_sign_up_under_bar"><u>회원가입</u></string>
    <string name="login_first_sign_up_null">회원가입을 먼저해주세요.</string>
    <string name="login_not_id_equal">id가 일치하지 않습니다.</string>
    <string name="login_not_pwed_equal">pwd가 일치하지 않습니다.</string>
    <string name="login_completed">%s이 완료 되었습니다.</string>
    <string name="login">로그인</string>
    <!--    회원가입 화면-->
    <string name="sign_up_snack_message">%s는 %d~%d 자로 입력해주세요.</string>
    <string name="sign_up_nickname_text">닉네임</string>
    <string name="sign_up_mbti_text">MBTI</string>
    <string name="sign_up_nickname_snack_message">닉네임은 %d자 이상으로 입력해주세요.</string>
    <string name="sign_up_mbti_snack_message">MBTI는 %d자 입니다.</string>
    <string name="sign_up_title">SIGN UP</string>
    <string name="sign_up_nickname_input_hint">닉네임을 입력해 주세요</string>
    <string name="sign_up_mbti_input_hint">mbti를 입력해 주세요</string>
    <string name="sign_up_btn">회원가입 하기</string>
    <string name="sign_up">회원가입</string>
    <!--    메인 액티비티-->
    <string name="main_back_once_pressed_exit">한번 더 누르면 종료 합니다.</string>
    <string name="menu_title_home">홈</string>
    <string name="menu_title_search">검색</string>
    <string name="menu_title_my">마이</string>
    <!--    마이페이지 화면-->
    <string name="main_logout_under_bar"><u>로그아웃</u></string>
    <string name="main_clear_user_under_bar"><u>회원탈퇴</u></string>
</resources>
