<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.auth.SignUpActivity">

        <ScrollView
            android:id="@+id/sv_sign_up_root"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp">

                <TextView
                    android:id="@+id/tv_sign_up_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/sign_up_title"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_sign_up_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/login_id_text"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_sign_up_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/primary"
                    app:boxStrokeErrorColor="@color/error"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null"
                    app:errorIconTint="@color/error"
                    app:errorTextColor="@color/error"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_id">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sign_up_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_id_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_sign_up_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_password_text"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_sign_up_id" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_sign_up_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/primary"
                    app:boxStrokeErrorColor="@color/error"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_pwd">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sign_up_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="12"
                        android:hint="@string/login_password_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLength="12" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_sign_up_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/sign_up_nickname_text"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_sign_up_pwd" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_sign_up_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/primary"
                    app:boxStrokeErrorColor="@color/error"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_nickname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sign_up_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_nickname_input_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="8" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_sign_up_mbti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/sign_up_mbti_text"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_sign_up_nickname" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_sign_up_mbti"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/primary"
                    app:boxStrokeErrorColor="@color/error"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_mbti">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sign_up_mbti"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_phone_input_hint"
                        android:imeOptions="actionNext"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/primary"
            android:paddingVertical="16dp"
            android:text="@string/sign_up_btn"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_sign_up_root" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
